Refresh token fetching from Unity working!

--- a/OculusGooglePhotos-Unity/.gitignore
+++ b/OculusGooglePhotos-Unity/.gitignore
@@ -1,8 +1,9 @@
-# This .gitignore file should be placed at the root of your Unity project 
-directory
+Constants.cs
+Constants.cs.meta
+
+# This .gitignore file should be placed at the root of your Unity project directory
 #
-# Get latest from 
-https://github.com/github/gitignore/blob/main/Unity.gitignore
+# Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /[Ll]ibrary/
 /[Tt]emp/
