--- a/OculusGooglePhotos-Web/functions/package.json
+++ b/OculusGooglePhotos-Web/functions/package.json
@@ -14,7 +14,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "node-fetch-commonjs": "^3.2.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
