--- a/OculusGooglePhotos-Unity/Assets/Plugins/Android/AndroidManifest.xml
+++ b/OculusGooglePhotos-Unity/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,21 +1,25 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-package="<packagename>"
-android:versionCode="1" android:versionName="1.0" 
-android:installLocation="auto">
-<application>
-<meta-data android:name="com.oculus.intent.category.VR" 
-android:value="vr_only"/>
-<meta-data android:name="com.oculus.supportedDevices" 
-android:value="quest|quest2|cambria"/>
-<activity android:screenOrientation="landscape"
-     android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-     
-android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
-     android:launchMode="singleTask"
-     android:resizeableActivity="false">
-</activity>
-</application>
-<uses-sdk android:minSdkVersion="23"/>
-<uses-feature android:glEsVersion="0x00030001" />
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+     <application
+          android:label="@string/app_name"
+          android:icon="@mipmap/app_icon"
+          android:allowBackup="false"
+     >
+          <activity android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+               android:configChanges="locale|fontScale|keyboard|keyboardHidden|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode"
+               android:launchMode="singleTask" android:name="com.unity3d.player.UnityPlayerActivity"
+               android:excludeFromRecents="true">
+               <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                    <category android:name="com.oculus.intent.category.VR" />
+               </intent-filter>
+               <meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
+          </activity>
+          <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="false" />
+          <meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only" />
+          <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|cambria" />
+     </application>
+     <uses-feature android:name="android.hardware.vr.headtracking" android:version="1" android:required="true" />
+     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
-
